--- a/css/style.production.css
+++ b/css/style.production.css
@@ -4,77 +4,90 @@
 * Autoprefixer: v9.7.6
 * Browsers: last 4 version
 */
-
 * {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
+
 body {
-  background-color: #EFC9AF;
-  font-family:'Merriweather', sans-serif;
+  background-color: #efc9af;
+  font-family: 'Merriweather', sans-serif;
   font-weight: 400;
   font-size: 20px;
-  color: #104C91;
+  color: #104c91;
 }
+
 header {
   background-color: #5cc4f4;
   font-size: 16px;
 }
+
 footer {
   background-color: #5cc4f4;
-  font-size: undefined;
+  font-size: 16px;
 }
+
 h1 {
   font-size: 30px;
   font-weight: 700;
 }
+
 h2 {
   font-size: 25px;
   font-weight: 600;
 }
+
 a {
   font-family: 'RocknRoll One', sans-serif;
   -webkit-transition: opacity 0.2s;
   -o-transition: opacity 0.2s;
   transition: opacity 0.2s;
 }
+
 /* temporarily deactived until page is uploaded
 a:visited {
     color: #5848cf;
 }
 */
-a:hover, a:focus {
+a:hover,
+a:focus {
   text-decoration: none;
   cursor: pointer;
   opacity: 0.6;
 }
+
 a:active {
-  color: #000000;
+  color: #000;
 }
+
 a.button__link:hover {
   text-decoration: none;
   -webkit-animation: link-shake 0.5s;
-          animation: link-shake 0.5s;
+  animation: link-shake 0.5s;
 }
+
 div.link__shake:hover {
   text-decoration: none;
   -webkit-animation: link-shake 0.5s;
-          animation: link-shake 0.5s;
+  animation: link-shake 0.5s;
 }
+
 img.img__shake:hover {
   -webkit-animation: link-shake 0.5s;
-          animation: link-shake 0.5s;
+  animation: link-shake 0.5s;
 }
+
 a.link__animation:hover {
   -webkit-animation: link-shake 0.5s;
-          animation: link-shake 0.5s;
+  animation: link-shake 0.5s;
 }
+
 .button {
   border: none;
   display: inline-block;
   font-family: inherit;
   background-color: #357b70;
-  color: #FFF;
+  color: #fff;
   text-decoration: none;
   padding: 10px;
   border-radius: 3px;
@@ -83,12 +96,13 @@ a.link__animation:hover {
   -o-transition: opacity 0.5s;
   transition: opacity 0.5s;
 }
+
 button {
   border: none;
   display: inline-block;
   font-family: inherit;
   background-color: #357b70;
-  color: #FFF;
+  color: #fff;
   text-decoration: none;
   padding: 10px;
   border-radius: 3px;
@@ -97,6 +111,7 @@ button {
   -o-transition: opacity 0.5s;
   transition: opacity 0.5s;
 }
+
 button:hover,
 button:focus,
 .button:hover,
@@ -104,39 +119,44 @@ button:focus,
   cursor: pointer;
   opacity: 0.8;
 }
+
 .profile {
   max-width: 1000px;
   margin: 0 auto;
 }
+
 .profile__portrait {
   width: 100%;
   max-width: 250px;
   float: left;
   margin-right: 40px;
-  /* border-radius: 50%; would round the borders of the picture in case I used a square picture*/
 }
+
 .page-header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
   width: 100%;
   padding: 20px;
 }
+
 .page-header__item {
--webkit-box-flex: 0;
-    -ms-flex: 0 1 200px;
-        flex: 0 1 200px;
+  -webkit-box-flex: 0;
+  -ms-flex: 0 1 200px;
+  flex: 0 1 200px;
 }
+
 .page-header__item:last-child {
   -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
   text-align: right;
 }
+
 .page-footer {
   clear: both;
   display: -webkit-box;
@@ -144,137 +164,165 @@ button:focus,
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   text-align: center;
 }
+
 .button__secondary {
   background-color: #e0b354;
   color: #2b2b2b;
 }
+
 .navigation-list {
   list-style-type: none;
 }
+
 .navigation-list li {
   display: inline-block;
   margin-left: 30px;
-  margin-top: 30px
+  margin-top: 30px;
 }
+
 .navigation-list__item--active {
   text-decoration: none;
 }
+
 @-webkit-keyframes color-change {
   0% {
     fill: #edc655;
   }
+
   50% {
     fill: #fcffad;
   }
+
   100% {
     fill: #f76414;
   }
 }
+
 @keyframes color-change {
   0% {
     fill: #edc655;
   }
+
   50% {
     fill: #fcffad;
   }
+
   100% {
     fill: #f76414;
   }
 }
+
 .sun {
   -webkit-animation: 4s color-change infinite alternate linear;
-          animation: 4s color-change infinite alternate linear;
+  animation: 4s color-change infinite alternate linear;
 }
+
 @-webkit-keyframes cloud-move {
   from {
     -webkit-transform: translate(0, 50px);
-            transform: translate(0, 50px);
+    transform: translate(0, 50px);
   }
+
   to {
     -webkit-transform: translate(200px, 50px);
-            transform: translate(200px, 50px);
+    transform: translate(200px, 50px);
   }
 }
+
 @keyframes cloud-move {
   from {
     -webkit-transform: translate(0, 50px);
-            transform: translate(0, 50px);
+    transform: translate(0, 50px);
   }
+
   to {
     -webkit-transform: translate(200px, 50px);
-            transform: translate(200px, 50px);
+    transform: translate(200px, 50px);
   }
 }
+
 .cloud-front {
   -webkit-animation: 30s cloud-move infinite alternate linear;
-          animation: 30s cloud-move infinite alternate linear;
+  animation: 30s cloud-move infinite alternate linear;
 }
+
 @-webkit-keyframes cloud-move-reverse {
   from {
     -webkit-transform: translate(446px, 48px);
-            transform: translate(446px, 48px);
+    transform: translate(446px, 48px);
   }
+
   to {
     -webkit-transform: translate(100px, 48px);
-            transform: translate(100px, 48px);
+    transform: translate(100px, 48px);
   }
 }
+
 @keyframes cloud-move-reverse {
   from {
     -webkit-transform: translate(446px, 48px);
-            transform: translate(446px, 48px);
+    transform: translate(446px, 48px);
   }
+
   to {
     -webkit-transform: translate(100px, 48px);
-            transform: translate(100px, 48px);
+    transform: translate(100px, 48px);
   }
 }
+
 .cloud-back {
   -webkit-animation: 34s cloud-move-reverse infinite alternate linear;
-          animation: 34s cloud-move-reverse infinite alternate linear;
+  animation: 34s cloud-move-reverse infinite alternate linear;
 }
-@-webkit-keyframes link-shake{
-  0%{
+
+@-webkit-keyframes link-shake {
+  0% {
     -webkit-transform: translateX(0);
-            transform: translateX(0)
-  }
-  25%{
-    -webkit-transform: translateX(5px);
-            transform: translateX(5px);
+    transform: translateX(0);
   }
 
-  50%{
-    -webkit-transform: translateX(-5px);
-            transform: translateX(-5px);
-  }
-  100%{
-    -webkit-transform: translateX(0px);
-            transform: translateX(0px);
-  }
-}
-@keyframes link-shake{
-  0%{
-    -webkit-transform: translateX(0);
-            transform: translateX(0)
-  }
-  25%{
+  25% {
     -webkit-transform: translateX(5px);
-            transform: translateX(5px);
+    transform: translateX(5px);
   }
 
-  50%{
+  50% {
     -webkit-transform: translateX(-5px);
-            transform: translateX(-5px);
+    transform: translateX(-5px);
   }
-  100%{
-    -webkit-transform: translateX(0px);
-            transform: translateX(0px);
+
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
   }
 }
+
+@keyframes link-shake {
+  0% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+
+  25% {
+    -webkit-transform: translateX(5px);
+    transform: translateX(5px);
+  }
+
+  50% {
+    -webkit-transform: translateX(-5px);
+    transform: translateX(-5px);
+  }
+
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+}
+
 /* fallback method for grid */
 .grid__item {
   display: inline-block;
@@ -282,7 +330,8 @@ button:focus,
   background-color: #909090;
   padding: 20px;
 }
-/*end of fallback method*/
+
+/* end of fallback method */
 @supports (display:grid) {
   .grid {
     display: -ms-grid;
@@ -292,42 +341,46 @@ button:focus,
     grid-gap: 20px;
     margin-bottom: 20px;
   }
+
   .grid__item {
     background-color: #909090;
     padding: 20px;
     width: auto;
   }
+
   .grid__item:last-child {
     -ms-grid-column: 3;
-        grid-column-start: 3;
-    -ms-grid-column-span: 0;
-    grid-column-end: 3;
+    grid-column: 3 / 3;
     -ms-grid-row: 2;
-        grid-row-start: 2;
     -ms-grid-row-span: 1;
-    grid-row-end: 3;
+    grid-row: 2 / 3;
   }
 }
+
 @media all and (max-width: 500px) {
   .grid {
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
   }
 }
-@media all and (min-width: 500px) and (max-width: 750px){
+
+@media all and (min-width: 500px) and (max-width: 750px) {
   .grid {
     -ms-grid-columns: 1fr 20px 1fr;
     grid-template-columns: 1fr 1fr;
   }
 }
+
 @media all and (max-width: 750px) {
   .grid {
     grid-gap: 10px;
   }
+
   .grid__item:last-child {
     grid-column: auto / auto;
     grid-row: auto / auto;
   }
+
   h1 {
     font-size: 22px;
   }
