--- a/css/style.css
+++ b/css/style.css
@@ -175,16 +175,16 @@ button:focus,
 }
 
 .sun {
-  animation: 4s color-change infinite alternate linear;
+  animation: 8s color-change infinite alternate linear;
 }
 
 @keyframes cloud-move {
   from {
-    transform: translate(0, 50px);
+    transform: translate(100px, 0);
   }
 
   to {
-    transform: translate(200px, 50px);
+    transform: translate(-750px, 0);
   }
 }
 
@@ -194,11 +194,11 @@ button:focus,
 
 @keyframes cloud-move-reverse {
   from {
-    transform: translate(446px, 48px);
+    transform: translate(-100px, 0);
   }
 
   to {
-    transform: translate(100px, 48px);
+    transform: translate(760px, 0);
   }
 }
 
@@ -278,4 +278,7 @@ button:focus,
   h1 {
     font-size: 22px;
   }
+}
+.about__layout {
+  padding: 10px 25px 10px 25px;
 }
