--- a/css/style.production.css
+++ b/css/style.production.css
@@ -4,9 +4,10 @@
 * Autoprefixer: v9.7.6
 * Browsers: last 4 version
 */
+
 * {
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
@@ -63,23 +64,23 @@ a:active {
 a.button__link:hover {
   text-decoration: none;
   -webkit-animation: link-shake 0.5s;
-  animation: link-shake 0.5s;
+          animation: link-shake 0.5s;
 }
 
 div.link__shake:hover {
   text-decoration: none;
   -webkit-animation: link-shake 0.5s;
-  animation: link-shake 0.5s;
+          animation: link-shake 0.5s;
 }
 
 img.img__shake:hover {
   -webkit-animation: link-shake 0.5s;
-  animation: link-shake 0.5s;
+          animation: link-shake 0.5s;
 }
 
 a.link__animation:hover {
   -webkit-animation: link-shake 0.5s;
-  animation: link-shake 0.5s;
+          animation: link-shake 0.5s;
 }
 
 .button {
@@ -138,22 +139,22 @@ button:focus,
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
   width: 100%;
   padding: 20px;
 }
 
 .page-header__item {
   -webkit-box-flex: 0;
-  -ms-flex: 0 1 200px;
-  flex: 0 1 200px;
+      -ms-flex: 0 1 200px;
+          flex: 0 1 200px;
 }
 
 .page-header__item:last-child {
   -webkit-box-flex: 1;
-  -ms-flex-positive: 1;
-  flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   text-align: right;
 }
 
@@ -164,8 +165,8 @@ button:focus,
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   text-align: center;
 }
 
@@ -217,109 +218,109 @@ button:focus,
 }
 
 .sun {
-  -webkit-animation: 4s color-change infinite alternate linear;
-  animation: 4s color-change infinite alternate linear;
+  -webkit-animation: 8s color-change infinite alternate linear;
+          animation: 8s color-change infinite alternate linear;
 }
 
 @-webkit-keyframes cloud-move {
   from {
-    -webkit-transform: translate(0, 50px);
-    transform: translate(0, 50px);
+    -webkit-transform: translate(100px, 0);
+            transform: translate(100px, 0);
   }
 
   to {
-    -webkit-transform: translate(200px, 50px);
-    transform: translate(200px, 50px);
+    -webkit-transform: translate(-750px, 0);
+            transform: translate(-750px, 0);
   }
 }
 
 @keyframes cloud-move {
   from {
-    -webkit-transform: translate(0, 50px);
-    transform: translate(0, 50px);
+    -webkit-transform: translate(100px, 0);
+            transform: translate(100px, 0);
   }
 
   to {
-    -webkit-transform: translate(200px, 50px);
-    transform: translate(200px, 50px);
+    -webkit-transform: translate(-750px, 0);
+            transform: translate(-750px, 0);
   }
 }
 
 .cloud-front {
   -webkit-animation: 30s cloud-move infinite alternate linear;
-  animation: 30s cloud-move infinite alternate linear;
+          animation: 30s cloud-move infinite alternate linear;
 }
 
 @-webkit-keyframes cloud-move-reverse {
   from {
-    -webkit-transform: translate(446px, 48px);
-    transform: translate(446px, 48px);
+    -webkit-transform: translate(-100px, 0);
+            transform: translate(-100px, 0);
   }
 
   to {
-    -webkit-transform: translate(100px, 48px);
-    transform: translate(100px, 48px);
+    -webkit-transform: translate(760px, 0);
+            transform: translate(760px, 0);
   }
 }
 
 @keyframes cloud-move-reverse {
   from {
-    -webkit-transform: translate(446px, 48px);
-    transform: translate(446px, 48px);
+    -webkit-transform: translate(-100px, 0);
+            transform: translate(-100px, 0);
   }
 
   to {
-    -webkit-transform: translate(100px, 48px);
-    transform: translate(100px, 48px);
+    -webkit-transform: translate(760px, 0);
+            transform: translate(760px, 0);
   }
 }
 
 .cloud-back {
   -webkit-animation: 34s cloud-move-reverse infinite alternate linear;
-  animation: 34s cloud-move-reverse infinite alternate linear;
+          animation: 34s cloud-move-reverse infinite alternate linear;
 }
 
 @-webkit-keyframes link-shake {
   0% {
     -webkit-transform: translateX(0);
-    transform: translateX(0);
+            transform: translateX(0);
   }
 
   25% {
     -webkit-transform: translateX(5px);
-    transform: translateX(5px);
+            transform: translateX(5px);
   }
 
   50% {
     -webkit-transform: translateX(-5px);
-    transform: translateX(-5px);
+            transform: translateX(-5px);
   }
 
   100% {
     -webkit-transform: translateX(0);
-    transform: translateX(0);
+            transform: translateX(0);
   }
 }
 
 @keyframes link-shake {
   0% {
     -webkit-transform: translateX(0);
-    transform: translateX(0);
+            transform: translateX(0);
   }
 
   25% {
     -webkit-transform: translateX(5px);
-    transform: translateX(5px);
+            transform: translateX(5px);
   }
 
   50% {
     -webkit-transform: translateX(-5px);
-    transform: translateX(-5px);
+            transform: translateX(-5px);
   }
 
   100% {
     -webkit-transform: translateX(0);
-    transform: translateX(0);
+            transform: translateX(0);
   }
 }
 
@@ -384,4 +385,7 @@ button:focus,
   h1 {
     font-size: 22px;
   }
+}
+.about__layout {
+  padding: 10px 25px 10px 25px;
 }
