--- a/css/style.production.css
+++ b/css/style.production.css
@@ -10,12 +10,23 @@
           box-sizing: border-box;
 }
 
+html, body {
+  height: 100%;
+}
+
 body {
-  background-color: #efc9af;
+  background-color: #f2f2f2;
   font-family: 'Merriweather', sans-serif;
   font-weight: 400;
   font-size: 20px;
-  color: #104c91;
+  color: #4A4238;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 header {
@@ -60,7 +71,9 @@ a:focus {
 a:active {
   color: #000;
 }
-
+a:visited {
+  color: #4A4238
+}
 a.button__link:hover {
   text-decoration: none;
   -webkit-animation: link-shake 0.5s;
@@ -87,7 +100,7 @@ a.link__animation:hover {
   border: none;
   display: inline-block;
   font-family: inherit;
-  background-color: #357b70;
+  background-color: #004777;
   color: #fff;
   text-decoration: none;
   padding: 10px;
@@ -102,7 +115,7 @@ button {
   border: none;
   display: inline-block;
   font-family: inherit;
-  background-color: #357b70;
+  background-color: #004777;
   color: #fff;
   text-decoration: none;
   padding: 10px;
@@ -112,7 +125,9 @@ button {
   -o-transition: opacity 0.5s;
   transition: opacity 0.5s;
 }
-
+#button__link__color {
+    color: #fff;
+}
 button:hover,
 button:focus,
 .button:hover,
@@ -168,11 +183,8 @@ button:focus,
       -ms-flex-direction: column;
           flex-direction: column;
   text-align: center;
-}
-
-.button__secondary {
-  background-color: #e0b354;
-  color: #2b2b2b;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
 }
 
 .navigation-list {
@@ -328,7 +340,7 @@ button:focus,
 .grid__item {
   display: inline-block;
   width: 33%;
-  background-color: #909090;
+  border-style: double;
   padding: 20px;
 }
 
@@ -344,7 +356,7 @@ button:focus,
   }
 
   .grid__item {
-    background-color: #909090;
+    border-style: double;
     padding: 20px;
     width: auto;
   }
@@ -388,4 +400,7 @@ button:focus,
 }
 .main__layout {
   padding: 10px 25px 10px 25px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 auto;
+          flex: 1 0 auto;
 }
