--- a/css/style.production.css
+++ b/css/style.production.css
@@ -4,13 +4,13 @@
 * Autoprefixer: v9.7.6
 * Browsers: last 4 version
 */
-
 * {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
   height: 100%;
 }
 
@@ -19,14 +19,14 @@ body {
   font-family: 'Merriweather', sans-serif;
   font-weight: 400;
   font-size: 20px;
-  color: #4A4238;
+  color: #4a4238;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
 
 header {
@@ -71,29 +71,31 @@ a:focus {
 a:active {
   color: #000;
 }
+
 a:visited {
-  color: #4A4238
+  color: #4a4238;
 }
+
 a.button__link:hover {
   text-decoration: none;
   -webkit-animation: link-shake 0.5s;
-          animation: link-shake 0.5s;
+  animation: link-shake 0.5s;
 }
 
 div.link__shake:hover {
   text-decoration: none;
   -webkit-animation: link-shake 0.5s;
-          animation: link-shake 0.5s;
+  animation: link-shake 0.5s;
 }
 
 img.img__shake:hover {
   -webkit-animation: link-shake 0.5s;
-          animation: link-shake 0.5s;
+  animation: link-shake 0.5s;
 }
 
 a.link__animation:hover {
   -webkit-animation: link-shake 0.5s;
-          animation: link-shake 0.5s;
+  animation: link-shake 0.5s;
 }
 
 .button {
@@ -125,9 +127,11 @@ button {
   -o-transition: opacity 0.5s;
   transition: opacity 0.5s;
 }
+
 #button__link__color {
-    color: #fff;
+  color: #fff;
 }
+
 button:hover,
 button:focus,
 .button:hover,
@@ -154,22 +158,22 @@ button:focus,
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
   width: 100%;
   padding: 20px;
 }
 
 .page-header__item {
   -webkit-box-flex: 0;
-      -ms-flex: 0 1 200px;
-          flex: 0 1 200px;
+  -ms-flex: 0 1 200px;
+  flex: 0 1 200px;
 }
 
 .page-header__item:last-child {
   -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
   text-align: right;
 }
 
@@ -180,11 +184,11 @@ button:focus,
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   text-align: center;
   -ms-flex-negative: 0;
-      flex-shrink: 0;
+  flex-shrink: 0;
 }
 
 .navigation-list {
@@ -231,108 +235,108 @@ button:focus,
 
 .sun {
   -webkit-animation: 8s color-change infinite alternate linear;
-          animation: 8s color-change infinite alternate linear;
+  animation: 8s color-change infinite alternate linear;
 }
 
 @-webkit-keyframes cloud-move {
   from {
     -webkit-transform: translate(100px, 0);
-            transform: translate(100px, 0);
+    transform: translate(100px, 0);
   }
 
   to {
     -webkit-transform: translate(-750px, 0);
-            transform: translate(-750px, 0);
+    transform: translate(-750px, 0);
   }
 }
 
 @keyframes cloud-move {
   from {
     -webkit-transform: translate(100px, 0);
-            transform: translate(100px, 0);
+    transform: translate(100px, 0);
   }
 
   to {
     -webkit-transform: translate(-750px, 0);
-            transform: translate(-750px, 0);
+    transform: translate(-750px, 0);
   }
 }
 
 .cloud-front {
   -webkit-animation: 30s cloud-move infinite alternate linear;
-          animation: 30s cloud-move infinite alternate linear;
+  animation: 30s cloud-move infinite alternate linear;
 }
 
 @-webkit-keyframes cloud-move-reverse {
   from {
     -webkit-transform: translate(-100px, 0);
-            transform: translate(-100px, 0);
+    transform: translate(-100px, 0);
   }
 
   to {
     -webkit-transform: translate(760px, 0);
-            transform: translate(760px, 0);
+    transform: translate(760px, 0);
   }
 }
 
 @keyframes cloud-move-reverse {
   from {
     -webkit-transform: translate(-100px, 0);
-            transform: translate(-100px, 0);
+    transform: translate(-100px, 0);
   }
 
   to {
     -webkit-transform: translate(760px, 0);
-            transform: translate(760px, 0);
+    transform: translate(760px, 0);
   }
 }
 
 .cloud-back {
   -webkit-animation: 34s cloud-move-reverse infinite alternate linear;
-          animation: 34s cloud-move-reverse infinite alternate linear;
+  animation: 34s cloud-move-reverse infinite alternate linear;
 }
 
 @-webkit-keyframes link-shake {
   0% {
     -webkit-transform: translateX(0);
-            transform: translateX(0);
+    transform: translateX(0);
   }
 
   25% {
     -webkit-transform: translateX(5px);
-            transform: translateX(5px);
+    transform: translateX(5px);
   }
 
   50% {
     -webkit-transform: translateX(-5px);
-            transform: translateX(-5px);
+    transform: translateX(-5px);
   }
 
   100% {
     -webkit-transform: translateX(0);
-            transform: translateX(0);
+    transform: translateX(0);
   }
 }
 
 @keyframes link-shake {
   0% {
     -webkit-transform: translateX(0);
-            transform: translateX(0);
+    transform: translateX(0);
   }
 
   25% {
     -webkit-transform: translateX(5px);
-            transform: translateX(5px);
+    transform: translateX(5px);
   }
 
   50% {
     -webkit-transform: translateX(-5px);
-            transform: translateX(-5px);
+    transform: translateX(-5px);
   }
 
   100% {
     -webkit-transform: translateX(0);
-            transform: translateX(0);
+    transform: translateX(0);
   }
 }
 
@@ -398,9 +402,10 @@ button:focus,
     font-size: 22px;
   }
 }
+
 .main__layout {
-  padding: 10px 25px 10px 25px;
+  padding: 10px 25px;
   -webkit-box-flex: 1;
-      -ms-flex: 1 0 auto;
-          flex: 1 0 auto;
+  -ms-flex: 1 0 auto;
+  flex: 1 0 auto;
 }
