--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,15 @@ h2 {
   font-weight: 600;
 }
 
+td {
+  text-align: center;
+  vertical-align: middle;
+}
+
+th {
+  padding: 10px;
+}
+
 a {
   font-family: 'RocknRoll One', sans-serif;
   transition: opacity 0.2s;
