--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,7 @@ button:focus,
 .button:focus {
   cursor: pointer;
   opacity: 0.8;
+  animation: link-shake var(--animation-time);
 }
 
 .main__layout {
