--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,8 @@
   --button-background-color: #004777;
   --button-text-color: #fff;
   --secondary-button-text-color: #2b2b2b;
-  --primary-font-size: 20px;
-  --secondary-font-size: 16px;
+  --primary-font-size: 120%;
+  --secondary-font-size: 90%;
   --grid-background-color: #909090;
   --animation-time: 0.5s;
 }
@@ -42,12 +42,12 @@ footer {
 }
 
 h1 {
-  font-size: 30px;
+  font-size: 150%;
   font-weight: 700;
 }
 
 h2 {
-  font-size: 25px;
+  font-size: 120%;
   font-weight: 600;
 }
 
@@ -57,7 +57,7 @@ td {
 }
 
 th {
-  padding: 10px;
+  padding: 2%;
 }
 
 a {
@@ -110,9 +110,9 @@ button {
   background-color: var(--button-background-color);
   color: var(--button-text-color);
   text-decoration: none;
-  padding: 10px;
-  border-radius: 3px;
-  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  padding: 1.3%;
+  border-radius: 5%;
+  border-bottom: 3px solid rgba(0, 0, 0, 0.3);
   transition: opacity 0.5s;
 }
 
@@ -130,27 +130,27 @@ button:focus,
 }
 
 .main__layout {
-  padding: 10px 25px;
+  padding: 0.8% 1.2%;
   flex: 1 0 auto;
 }
 
 .profile {
-  max-width: 1000px;
+  max-width: 100%;
   margin: 0 auto;
 }
 
 .profile__portrait {
   width: 100%;
-  max-width: 250px;
+  max-width: 30%;
   float: left;
-  margin-right: 40px;
+  margin-right: 5%;
 }
 
 .page-header {
   display: flex;
   flex-direction: row;
   width: 100%;
-  padding: 20px;
+  padding: 2%;
 }
 
 .logo {
@@ -159,7 +159,7 @@ button:focus,
 }
 
 .page-header__item {
-  flex: 0 1 200px;
+  flex: 0 1 50%;
 }
 
 .page-header__item:last-child {
@@ -181,8 +181,8 @@ button:focus,
 
 .navigation-list li {
   display: inline-block;
-  margin-left: 30px;
-  margin-top: 30px;
+  margin-left: 4%;
+  margin-top: 3.5%;
 }
 
 .navigation-list__item--active {
@@ -266,13 +266,13 @@ button:focus,
   .grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 20px;
-    margin-bottom: 20px;
+    grid-gap: 1.5%;
+    margin-bottom: 3%;
   }
 
   .grid__item {
     border-style: double;
-    padding: 20px;
+    padding: 4%;
     width: auto;
   }
 
@@ -301,7 +301,7 @@ button:focus,
 
 @media all and (max-width: 750px) {
   .grid {
-    grid-gap: 10px;
+    grid-gap: 1.5%;
   }
 
   .grid__item:last-child {
@@ -310,6 +310,6 @@ button:focus,
   }
 
   h1 {
-    font-size: 22px;
+    font-size: 150%;
   }
 }
