--- a/css/style.production.css
+++ b/css/style.production.css
@@ -18,7 +18,7 @@ body {
   background-color: #f2f2f2;
   font-family: 'Merriweather', sans-serif;
   font-weight: 400;
-  font-size: 20px;
+  font-size: 120%;
   color: #4a4238;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -31,21 +31,21 @@ body {
 
 header {
   background-color: #5cc4f4;
-  font-size: 16px;
+  font-size: 90%;
 }
 
 footer {
   background-color: #5cc4f4;
-  font-size: 16px;
+  font-size: 90%;
 }
 
 h1 {
-  font-size: 30px;
+  font-size: 150%;
   font-weight: 700;
 }
 
 h2 {
-  font-size: 25px;
+  font-size: 120%;
   font-weight: 600;
 }
 
@@ -55,7 +55,7 @@ td {
 }
 
 th {
-  padding: 10px;
+  padding: 2%;
 }
 
 a {
@@ -113,9 +113,9 @@ a.link__animation:hover {
   background-color: #004777;
   color: #fff;
   text-decoration: none;
-  padding: 10px;
-  border-radius: 3px;
-  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  padding: 1.3%;
+  border-radius: 5%;
+  border-bottom: 3px solid rgba(0, 0, 0, 0.3);
   -webkit-transition: opacity 0.5s;
   -o-transition: opacity 0.5s;
   transition: opacity 0.5s;
@@ -128,9 +128,9 @@ button {
   background-color: #004777;
   color: #fff;
   text-decoration: none;
-  padding: 10px;
-  border-radius: 3px;
-  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  padding: 1.3%;
+  border-radius: 5%;
+  border-bottom: 3px solid rgba(0, 0, 0, 0.3);
   -webkit-transition: opacity 0.5s;
   -o-transition: opacity 0.5s;
   transition: opacity 0.5s;
@@ -140,31 +140,51 @@ button {
   color: #fff;
 }
 
-button:hover,
-button:focus,
-.button:hover,
+button:hover {
+  cursor: pointer;
+  opacity: 0.8;
+  -webkit-animation: link-shake 0.5s;
+  animation: link-shake 0.5s;
+}
+
+button:focus {
+  cursor: pointer;
+  opacity: 0.8;
+  -webkit-animation: link-shake 0.5s;
+  animation: link-shake 0.5s;
+}
+
+.button:hover {
+  cursor: pointer;
+  opacity: 0.8;
+  -webkit-animation: link-shake 0.5s;
+  animation: link-shake 0.5s;
+}
+
 .button:focus {
   cursor: pointer;
   opacity: 0.8;
+  -webkit-animation: link-shake 0.5s;
+  animation: link-shake 0.5s;
 }
 
 .main__layout {
-  padding: 10px 25px;
+  padding: 0.8% 1.2%;
   -webkit-box-flex: 1;
   -ms-flex: 1 0 auto;
   flex: 1 0 auto;
 }
 
 .profile {
-  max-width: 1000px;
+  max-width: 100%;
   margin: 0 auto;
 }
 
 .profile__portrait {
   width: 100%;
-  max-width: 250px;
+  max-width: 30%;
   float: left;
-  margin-right: 40px;
+  margin-right: 5%;
 }
 
 .page-header {
@@ -176,7 +196,7 @@ button:focus,
   -ms-flex-direction: row;
   flex-direction: row;
   width: 100%;
-  padding: 20px;
+  padding: 2%;
 }
 
 .logo {
@@ -186,8 +206,8 @@ button:focus,
 
 .page-header__item {
   -webkit-box-flex: 0;
-  -ms-flex: 0 1 200px;
-  flex: 0 1 200px;
+  -ms-flex: 0 1 50%;
+  flex: 0 1 50%;
 }
 
 .page-header__item:last-child {
@@ -217,8 +237,8 @@ button:focus,
 
 .navigation-list li {
   display: inline-block;
-  margin-left: 30px;
-  margin-top: 30px;
+  margin-left: 4%;
+  margin-top: 3.5%;
 }
 
 .navigation-list__item--active {
@@ -373,15 +393,15 @@ button:focus,
   .grid {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
+    -ms-grid-columns: 1fr 1.5% 1fr 1.5% 1fr;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 20px;
-    margin-bottom: 20px;
+    grid-gap: 1.5%;
+    margin-bottom: 3%;
   }
 
   .grid__item {
     border-style: double;
-    padding: 20px;
+    padding: 4%;
     width: auto;
   }
 
@@ -404,23 +424,18 @@ button:focus,
     max-width: 100%;
     height: auto;
   }
-
-  .navigation-list {
-    max-width: 100%;
-    height: auto;
-  }
 }
 
 @media all and (min-width: 500px) and (max-width: 750px) {
   .grid {
-    -ms-grid-columns: 1fr 20px 1fr;
+    -ms-grid-columns: 1fr 1.5% 1fr;
     grid-template-columns: 1fr 1fr;
   }
 }
 
 @media all and (max-width: 750px) {
   .grid {
-    grid-gap: 10px;
+    grid-gap: 1.5%;
   }
 
   .grid__item:last-child {
@@ -429,6 +444,6 @@ button:focus,
   }
 
   h1 {
-    font-size: 22px;
+    font-size: 150%;
   }
 }
