--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,7 @@ button {
   border-radius: 5%;
   border-bottom: 3px solid rgba(0, 0, 0, 0.3);
   transition: opacity 0.5s;
+  max-width: 30%;
 }
 
 #button__link__color {
@@ -187,6 +188,10 @@ button:focus,
 
 .navigation-list__item--active {
   text-decoration: none;
+}
+
+.input-field {
+  width: 75%;
 }
 
 @keyframes color-change {
@@ -280,6 +285,18 @@ button:focus,
     grid-column: 3 / 3;
     grid-row: 2 / 3;
   }
+
+  form {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 3%;
+    margin-bottom: 1%;
+  }
+}
+
+.error-message {
+  color: red;
+  font-size: 0.8em;
 }
 
 @media all and (max-width: 500px) {
@@ -291,11 +308,22 @@ button:focus,
     max-width: 100%;
     height: auto;
   }
+
+  form {
+    grid-template-columns: 1fr;
+    margin-bottom: 10%;
+  }
+
 }
 
 @media all and (min-width: 500px) and (max-width: 750px) {
   .grid {
     grid-template-columns: 1fr 1fr;
+  }
+
+  form {
+    grid-template-columns: 1fr 1fr;
+    margin-bottom: 3%;
   }
 }
 
