--- a/css/style.production.css
+++ b/css/style.production.css
@@ -4,6 +4,7 @@
 * Autoprefixer: v9.7.6
 * Browsers: last 4 version
 */
+
 * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -16,7 +17,7 @@ body {
 
 body {
   background-color: #f2f2f2;
-  font-family: 'Merriweather', sans-serif;
+  font-family: "Merriweather", sans-serif;
   font-weight: 400;
   font-size: 120%;
   color: #4a4238;
@@ -59,7 +60,7 @@ th {
 }
 
 a {
-  font-family: 'RocknRoll One', sans-serif;
+  font-family: "RocknRoll One", sans-serif;
   -webkit-transition: opacity 0.2s;
   -o-transition: opacity 0.2s;
   transition: opacity 0.2s;
@@ -113,12 +114,13 @@ a.link__animation:hover {
   background-color: #004777;
   color: #fff;
   text-decoration: none;
-  padding: 1.3%;
+  padding: 1%;
   border-radius: 5%;
   border-bottom: 3px solid rgba(0, 0, 0, 0.3);
   -webkit-transition: opacity 0.5s;
   -o-transition: opacity 0.5s;
   transition: opacity 0.5s;
+  max-width: 30%;
 }
 
 button {
@@ -134,6 +136,7 @@ button {
   -webkit-transition: opacity 0.5s;
   -o-transition: opacity 0.5s;
   transition: opacity 0.5s;
+  max-width: 30%;
 }
 
 #button__link__color {
@@ -243,6 +246,14 @@ button:focus {
 
 .navigation-list__item--active {
   text-decoration: none;
+}
+
+.input-field {
+  width: 75%;
+}
+
+.center {
+  text-align: center;
 }
 
 @-webkit-keyframes color-change {
@@ -389,7 +400,7 @@ button:focus {
 }
 
 /* end of fallback method */
-@supports (display:grid) {
+@supports (display: grid) {
   .grid {
     display: -ms-grid;
     display: grid;
@@ -412,6 +423,20 @@ button:focus {
     -ms-grid-row-span: 1;
     grid-row: 2 / 3;
   }
+
+  form {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 3% 1fr 3% 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 3%;
+    margin-bottom: 1%;
+  }
+}
+
+.error-message {
+  color: red;
+  font-size: 0.8em;
 }
 
 @media all and (max-width: 500px) {
@@ -424,12 +449,24 @@ button:focus {
     max-width: 100%;
     height: auto;
   }
+
+  form {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+    margin-bottom: 10%;
+  }
 }
 
 @media all and (min-width: 500px) and (max-width: 750px) {
   .grid {
     -ms-grid-columns: 1fr 1.5% 1fr;
     grid-template-columns: 1fr 1fr;
+  }
+
+  form {
+    -ms-grid-columns: 1fr 3% 1fr;
+    grid-template-columns: 1fr 1fr;
+    margin-bottom: 3%;
   }
 }
 
