Update work page with pictures and newest app

--- a/css/style.css
+++ b/css/style.css
@@ -198,6 +198,10 @@ button:focus,
   text-align: center;
 }
 
+.work-pictures {
+  width: 100%;
+}
+
 @keyframes color-change {
   0% {
     fill: #edc655;
