--- a/css/style.production.css
+++ b/css/style.production.css
@@ -1,13 +1,13 @@
 /*
 * Prefixed by https://autoprefixer.github.io
-* PostCSS: v7.0.29,
-* Autoprefixer: v9.7.6
+* PostCSS: v8.3.6,
+* Autoprefixer: v10.3.1
 * Browsers: last 4 version
 */
 
 * {
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 html,
@@ -26,8 +26,8 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 header {
@@ -88,23 +88,23 @@ a:visited {
 a.button__link:hover {
   text-decoration: none;
   -webkit-animation: link-shake 0.5s;
-  animation: link-shake 0.5s;
+          animation: link-shake 0.5s;
 }
 
 div.link__shake:hover {
   text-decoration: none;
   -webkit-animation: link-shake 0.5s;
-  animation: link-shake 0.5s;
+          animation: link-shake 0.5s;
 }
 
 img.img__shake:hover {
   -webkit-animation: link-shake 0.5s;
-  animation: link-shake 0.5s;
+          animation: link-shake 0.5s;
 }
 
 a.link__animation:hover {
   -webkit-animation: link-shake 0.5s;
-  animation: link-shake 0.5s;
+          animation: link-shake 0.5s;
 }
 
 .button {
@@ -147,35 +147,35 @@ button:hover {
   cursor: pointer;
   opacity: 0.8;
   -webkit-animation: link-shake 0.5s;
-  animation: link-shake 0.5s;
+          animation: link-shake 0.5s;
 }
 
 button:focus {
   cursor: pointer;
   opacity: 0.8;
   -webkit-animation: link-shake 0.5s;
-  animation: link-shake 0.5s;
+          animation: link-shake 0.5s;
 }
 
 .button:hover {
   cursor: pointer;
   opacity: 0.8;
   -webkit-animation: link-shake 0.5s;
-  animation: link-shake 0.5s;
+          animation: link-shake 0.5s;
 }
 
 .button:focus {
   cursor: pointer;
   opacity: 0.8;
   -webkit-animation: link-shake 0.5s;
-  animation: link-shake 0.5s;
+          animation: link-shake 0.5s;
 }
 
 .main__layout {
   padding: 0.8% 1.2%;
   -webkit-box-flex: 1;
-  -ms-flex: 1 0 auto;
-  flex: 1 0 auto;
+      -ms-flex: 1 0 auto;
+          flex: 1 0 auto;
 }
 
 .profile {
@@ -196,8 +196,8 @@ button:focus {
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
   width: 100%;
   padding: 2%;
 }
@@ -209,14 +209,14 @@ button:focus {
 
 .page-header__item {
   -webkit-box-flex: 0;
-  -ms-flex: 0 1 auto;
-  flex: 0 1 auto;
+      -ms-flex: 0 1 auto;
+          flex: 0 1 auto;
 }
 
 .page-header__item:last-child {
   -webkit-box-flex: 1;
-  -ms-flex-positive: 1;
-  flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   text-align: right;
 }
 
@@ -227,11 +227,11 @@ button:focus {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   text-align: center;
   -ms-flex-negative: 0;
-  flex-shrink: 0;
+      flex-shrink: 0;
 }
 
 .navigation-list {
@@ -254,6 +254,10 @@ button:focus {
 
 .center {
   text-align: center;
+}
+
+.work-pictures {
+  width: 100%;
 }
 
 @-webkit-keyframes color-change {
@@ -286,108 +290,108 @@ button:focus {
 
 .sun {
   -webkit-animation: 8s color-change infinite alternate linear;
-  animation: 8s color-change infinite alternate linear;
+          animation: 8s color-change infinite alternate linear;
 }
 
 @-webkit-keyframes cloud-move {
   from {
     -webkit-transform: translate(100px, 0);
-    transform: translate(100px, 0);
+            transform: translate(100px, 0);
   }
 
   to {
     -webkit-transform: translate(-750px, 0);
-    transform: translate(-750px, 0);
+            transform: translate(-750px, 0);
   }
 }
 
 @keyframes cloud-move {
   from {
     -webkit-transform: translate(100px, 0);
-    transform: translate(100px, 0);
+            transform: translate(100px, 0);
   }
 
   to {
     -webkit-transform: translate(-750px, 0);
-    transform: translate(-750px, 0);
+            transform: translate(-750px, 0);
   }
 }
 
 .cloud-front {
   -webkit-animation: 30s cloud-move infinite alternate linear;
-  animation: 30s cloud-move infinite alternate linear;
+          animation: 30s cloud-move infinite alternate linear;
 }
 
 @-webkit-keyframes cloud-move-reverse {
   from {
     -webkit-transform: translate(-100px, 0);
-    transform: translate(-100px, 0);
+            transform: translate(-100px, 0);
   }
 
   to {
     -webkit-transform: translate(760px, 0);
-    transform: translate(760px, 0);
+            transform: translate(760px, 0);
   }
 }
 
 @keyframes cloud-move-reverse {
   from {
     -webkit-transform: translate(-100px, 0);
-    transform: translate(-100px, 0);
+            transform: translate(-100px, 0);
   }
 
   to {
     -webkit-transform: translate(760px, 0);
-    transform: translate(760px, 0);
+            transform: translate(760px, 0);
   }
 }
 
 .cloud-back {
   -webkit-animation: 34s cloud-move-reverse infinite alternate linear;
-  animation: 34s cloud-move-reverse infinite alternate linear;
+          animation: 34s cloud-move-reverse infinite alternate linear;
 }
 
 @-webkit-keyframes link-shake {
   0% {
     -webkit-transform: translateX(0);
-    transform: translateX(0);
+            transform: translateX(0);
   }
 
   25% {
     -webkit-transform: translateX(5px);
-    transform: translateX(5px);
+            transform: translateX(5px);
   }
 
   50% {
     -webkit-transform: translateX(-5px);
-    transform: translateX(-5px);
+            transform: translateX(-5px);
   }
 
   100% {
     -webkit-transform: translateX(0);
-    transform: translateX(0);
+            transform: translateX(0);
   }
 }
 
 @keyframes link-shake {
   0% {
     -webkit-transform: translateX(0);
-    transform: translateX(0);
+            transform: translateX(0);
   }
 
   25% {
     -webkit-transform: translateX(5px);
-    transform: translateX(5px);
+            transform: translateX(5px);
   }
 
   50% {
     -webkit-transform: translateX(-5px);
-    transform: translateX(-5px);
+            transform: translateX(-5px);
   }
 
   100% {
     -webkit-transform: translateX(0);
-    transform: translateX(0);
+            transform: translateX(0);
   }
 }
 
@@ -483,4 +487,18 @@ button:focus {
   h1 {
     font-size: 150%;
   }
+}
+.example {
+    display: -ms-grid;
+    display: grid;
+    -webkit-transition: all .5s;
+    -o-transition: all .5s;
+    transition: all .5s;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+    background: -webkit-gradient(linear, left top, left bottom, from(white), to(black));
+    background: -o-linear-gradient(top, white, black);
+    background: linear-gradient(to bottom, white, black);
 }
